# ApiAi

./: .gitignore  BOMCategorizer.code-workspace  BUILD.md  CLEANUP.md  CLEANUP_GUIDE.md  ENCruptionArchitGuide.md  Educational_Platform_Roadmap.md  LOGS_GUIDE.md  MIGRATION_SCRIPT.ps1  Makefile  README.md  RELEASE_NOTES_v2.4.2.md  SETUP.md  Tauri_React_Rust_Course.md  VERSION_MANAGEMENT.md  main.py  requirements.txt
config/: config_qt.json.template
deployment/: build_installer.py  installer.iss
docs/: AI_INTEGRATION_GUIDE.md  API_MANAGEMENT.md  CHEAT_SHEET.md  ENCRYPTION.md  INSTALLATION_MACOS.md  INSTALLATION_QUICK_START.md  INSTALLATION_QUICK_START_WINDOWS.md  INSTALLATION_WINDOWS.md  KEYS_MANAGEMENT.md  PORTS.md  PROJECT_STRUCTURE.md
fonts/: README.md
gui/: dialogs.py  main_window.py  search_widget.py  sections.py  settings_dialog.py
offline_package/: README.md
offline_packages/: README.md
python/: LOGS_GUIDE.md  README.md  SETUP.md  config_manager.py  encryption.py  styles.py  update_config.py  utils.py
python/config/: config_qt.json.template
python/deployment/: build_macos.sh  installer.iss  setup_macos.py
python/docs/: DISPLAY_FIXES.md  FONT_SETUP_QUICK.md  OFFLINE_INSTALLATION_GUIDE.md  VERSION_MANAGEMENT.md
python/gui/: main_window.py  pdf_search.py  search_widget.py  sections.py  settings_dialog.py
python/scripts/: run_app.bat  update_version.py
rust/: CHEAT_SHEET.md  Cargo.toml  Makefile  PROJECT_STRUCTURE.md  README.md
rust/src/: api.rs  main.rs
scripts/: download_fonts.py  update_version.py
shared-rs/: Cargo.toml  README.md
shared-rs/src/: api.rs  encryption.rs  lib.rs
tauri-app/: .gitignore  CONFIG_MANAGEMENT.md  Makefile  README.md  VERSION_QUICK_REF.md
tauri-app/config_templates/: config.json.template
tauri-app/scripts/: backup_config.sh  restore_config.sh  update_version.py
tauri-app/src/: chat-history.js  file-editor.js  index.html  main.js  network-monitor.css  network-monitor.js  provider-settings.js  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: api.rs  lib.rs
