[package]
name = "apiai"
version = "1.0.5"
edition = "2021"

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
mockito = "1.5"
