[package]
name = "apiai"
version = "2.4.0"
edition = "2021"

[dependencies]
# Shared library (contains API clients and encryption)
apiai-shared = { path = "../shared-rs" }

# GUI framework
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# App-level dependencies (used by main.rs logic)
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mockito = "1.5"
