[package]
name = "apiai-shared"
version = "2.1.1"
edition = "2021"
authors = ["Maksim Kurein"]
description = "Shared API and encryption utilities for ApiAi project"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Encryption
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
